fix: Fix drawer popup container not work & fix[Pagination]: disable jumper and pageSize selector when disabled is true (#297)
fix: pagination disabled & drawer popup container

--- a/packages/web-vue/components/drawer/style/index.less
+++ b/packages/web-vue/components/drawer/style/index.less
@@ -12,7 +12,7 @@
 }
 
 .@{drawer-prefix-cls}-mask {
-  position: fixed;
+  position: absolute;
   top: 0;
   right: 0;
   bottom: 0;
@@ -42,7 +42,7 @@
 
     .@{drawer-prefix-cls}-title {
       color: @drawer-color-header-text;
-      font-weight: @font-weight-500;
+      font-weight: @drawer-font-header-weight;
       font-size: @drawer-font-header-size;
       text-align: left;
     }
