--- a/packages/web-vue/components/drawer/style/token.less
+++ b/packages/web-vue/components/drawer/style/token.less
@@ -6,10 +6,11 @@
 @drawer-padding-horizontal: @spacing-7;
 @drawer-padding-footer-vertical: @spacing-7;
 @drawer-padding-content-vertical: @spacing-6;
+@drawer-font-header-weight: @font-weight-500;
 
 @drawer-color-border: var(--color-neutral-3);
 @drawer-color-header-text: var(--color-text-1);
 @drawer-color-content-text: var(--color-text-1);
 
 @drawer-position-close-icon-right: @spacing-7;
-@drawer-font-size-close-icon: @font-size-body-1;
+@drawer-font-size-close-icon: @size-3;
