--- a/packages/web-vue/components/dropdown/style/index.less
+++ b/packages/web-vue/components/dropdown/style/index.less
@@ -10,11 +10,8 @@
   border: 1px solid @dropdown-color-border;
   border-radius: @dropdown-border-radius;
   box-shadow: @dropdown-box-shadow;
-
-  &-list-wrapper {
-    max-height: @dropdown-max-height;
-    overflow-y: auto;
-  }
+  max-height: @dropdown-max-height;
+  overflow-y: auto;
 
   &-list {
     margin-top: 0;
