--- a/packages/web-vue/components/pagination/style/index.less
+++ b/packages/web-vue/components/pagination/style/index.less
@@ -6,7 +6,7 @@
   font-size: ~'@{pagination-size-@{size}-font-size}';
   line-height: ~'@{pagination-size-@{size}}';
 
-  &-prev,
+  &-previous,
   &-next {
     font-size: ~'@{pagination-size-icon-arrow_@{size}}';
   }
@@ -51,20 +51,14 @@
 
     .page-item(default);
 
-    &-disabled {
-      color: @pagination-color-item-text_disabled;
-      background-color: @pagination-color-bg-item_disabled;
-      border-color: @pagination-color-item-border_disabled;
-      cursor: not-allowed;
-    }
-
-    &:not(&-disabled):not(&-active):hover {
+    &:hover {
       color: @pagination-color-item-text_hover;
       background-color: @pagination-color-bg-item_hover;
       border-color: @pagination-color-item-border_hover;
     }
 
-    &-active {
+    &-active,
+    &-active:hover {
       color: @pagination-color-item-text_active;
       background-color: @pagination-color-bg-item_active;
       border-color: @pagination-color-item-border_active;
@@ -74,12 +68,21 @@
           @transition-timing-function-linear;
     }
 
+    &-disabled,
+    &-disabled:hover {
+      color: @pagination-color-item-text_disabled;
+      background-color: @pagination-color-bg-item_disabled;
+      border-color: @pagination-color-item-border_disabled;
+      cursor: not-allowed;
+    }
+
+
     &:not(:last-child) {
       margin-right: @pagination-item-spacing;
     }
   }
 
-  &-item-prev,
+  &-item-previous,
   &-item-next {
     color: @pagination-color-icon-arrow;
     font-size: @pagination-size-icon-arrow_default;
@@ -134,7 +137,7 @@
     }
   }
 
-  &-option {
+  &-options {
     position: relative;
     display: inline-block;
     min-width: 0;
@@ -195,7 +198,7 @@
     margin-left: 0;
   }
 
-  &-simple &-item-prev,
+  &-simple &-item-previous,
   &-simple &-item-next {
     color: @pagination-simple-color-icon-arrow;
     background-color: @pagination-simple-color-icon-arrow-bg;
@@ -206,7 +209,7 @@
     }
   }
 
-  &-simple &-item-prev&-item-disabled,
+  &-simple &-item-previous&-item-disabled,
   &-simple &-item-next&-item-disabled {
     color: @pagination-simple-color-icon-arrow-text_disabled;
     background-color: @pagination-simple-color-icon-arrow-bg_disabled;
